--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
 				   <ul class="blank"></ul>
 
 				</ul>
-				
+
 				   <p> Listening to music makes humans feel emotion and that is what we thrive on. Music has the tendency to impact an individuals mood and behavior. People can benefit by acknowledging how music makes them feel and using it to their advantage. When feeling stressed people can use music as a means of escape.   Besides music reflects the mood and emotions of people. We can say that music is an art of special emotional power. We can't deny the fact that we cannot live without it.</p> 
 	
-	
+				 <p> Music is one of the most beautiful creations of art. It has the power to heal our mind, body and soul by its soothing effect. Different people have different taste in music and it works as a therapy for them. Music aids in expressing ourselves. It can help in healing conditions like depression, Alzheimer and insomnia. It also helps us rejuvenate and connect with ourselves as well as those around us.</p>
+			
 				</div>	
 					
 				</div>
