--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                    <li id="m6"><a href="https://docs.google.com/document/d/1LUPZRDoEo0qed3EGwvOa69Muj4SxfERHDFY_nk411iE/edit">🎔 Question 6 : What are the genre of music ?</a></li>
 
 				
+			<ul class="blank"></ul>
+
+		</ul>
+		
+		<ul class="blank"></ul>
+
+	</ul>
                    <ul class="blank"></ul>
 
 		</ul>
