--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 				<div class="clear"></div>
 			</div>
 			<div id="https://github.com/Sorsogon-State-University-Bulan-Campus/bsit-2-4-2022-grp-3-borres-et-al">
-				<div id="https://github.com/Sorsogon-State-University-Bulan-Campus/bsit-2-4-2022-grp-3-borres-et-al ">
-					   <p>    Sorsogon-State-University-Bulan-Campus/bsit-2-4-2022-grp-3-borres-et-al </p>
+				<div id="https://github.com/Sorsogon-State-University-Bulan-Campus/bsit-2-4-2022-grp-3-borres-et-al body-left ">
+					     Sorsogon-State-University-Bulan-Campus/bsit-2-4-2022-grp-3-borres-et-al 
 				</div>
 			</div>
 			<div class="clear">&nbsp;</div>
