--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 						<img src="images/pic_1.jpg" width="259" height="199" alt="Pic 1" />
 					</div>
 					<h2> ♫ GENRE OF MUSIC 🎼 🎷🎸 </h2>
+
+					div.d{
+						text-align:justify;
+					}
+					<div<div class="d">
 						<p>🎼  Music is a form of art that uses sound organised in time. Music is also a form of entertainment that puts sounds together in a way that people like, find interesting or dance to. Most music includes people singing with their voices or playing musical instruments, such as the piano, guitar, drums or violin.
                         </p>
 						
@@ -52,6 +57,7 @@
 			
 			<p> "MUSIC is the language of the spirit . It opens the secret of life bringing peace , abolishing strife ". - Kahlil Gibran<a href=""></a>.</p>
 
+            </div>
 
 			<ul class="blank"></ul>
 
@@ -73,18 +79,19 @@
 				   <ul class="blank"></ul>
 
 				</ul>
-                   <ul class="blank"></ul>
-
-		</ul>
+		div.d{
+			text-align:justify;
+		}
+		<div<div class="d">
 				   <p>♫ Music is having rhythm, melody, or harmony. Music is a learning, a therapy, and teaching tool. Music adjusts our moods, and used throughout our lives. To lead a healthy life, we need to add in music. Whether playing it, listening to it, or using it. Music is therapy because of its positive changes in human behavior. The therapy consist of singing, playing instruments, moving to music, and listening to music. This builds your communication skills, motor skills and emotional development. <a href=""></a>.</p>
 
-				   <ul class="blank"></ul>
-
-				</ul>
+				   
 
 				   <p>♫ Listening to music makes humans feel emotion and that is what we thrive on. Music has the tendency to impact an individuals mood and behavior. People can benefit by acknowledging how music makes them feel and using it to their advantage. When feeling stressed people can use music as a means of escape.   Besides music reflects the mood and emotions of people. We can say that music is an art of special emotional power. We can't deny the fact that we cannot live without it.</p> 
 	
 				 <p>♫ Music is one of the most beautiful creations of art. It has the power to heal our mind, body and soul by its soothing effect. Different people have different taste in music and it works as a therapy for them. Music aids in expressing ourselves. It can help in healing conditions like depression, Alzheimer and insomnia. It also helps us rejuvenate and connect with ourselves as well as those around us.</p>
+		
+				</div>
 				 <p> ♫📌</p> 
 
 				</div>	
